<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReferEarnActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollbarAlwaysDrawVerticalTrack="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/activity_refer_earn_lin1"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:background="@drawable/gradient_bg"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/activity_refer_earn_back"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:src="@drawable/ic_back_white"/>

                    <TextView
                        android:id="@+id/activity_refer_earn_my_earning"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:text="MY EARNINGS"
                        android:background="@drawable/border"
                        android:gravity=""/>
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="REFER MORE TO EARN MORE!"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/ic_coins_group"/>
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_teamwork"/>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/ic_coins_group"/>


                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/activity_refer_earn_lin2"
                android:layout_marginTop="80dp"
                android:layout_below="@+id/activity_refer_earn_lin1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/invite"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/border_circular"/>
                        <ImageView
                            android:layout_marginTop="12dp"
                            android:layout_marginLeft="15dp"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/ic_group"/>
                    </RelativeLayout>
                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/playzon_blue_detail"/>
                    <RelativeLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/invite2"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/border_circular"/>
                        <ImageView
                            android:layout_marginTop="14dp"
                            android:layout_marginLeft="16dp"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/ic_register"/>

                    </RelativeLayout>
                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/playzon_blue_detail"/>
                    <RelativeLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/invite3"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/border_circular"/>
                        <ImageView
                            android:layout_marginTop="12dp"
                            android:layout_marginLeft="14dp"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/ic_purse"/>

                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <TextView
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:layout_marginRight="35dp"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/invite"/>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="17dp"
                        android:layout_marginRight="17dp"
                        android:textSize="12sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:text="@string/invite2"/>
                    <TextView
                        android:layout_weight="1"
                        android:layout_marginLeft="35dp"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:text="@string/invite3"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="30dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="YOUR REFERRAL CODE"/>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/dotted_border">
                    <TextView
                        android:id="@+id/activity_refer_earn_referral_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="50dp"
                        android:paddingRight="50dp"
                        android:paddingBottom="5dp"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:text="SHUTCCNM" />
                </LinearLayout>
                <Button
                    android:id="@+id/activity_refer_earn_taptocopy"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="TAP TO COPY"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textStyle="bold"
                    android:background="@color/transparent"
                    android:textSize="14sp"
                    android:textColor="@color/playzon_blue_detail"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/activity_refer_earn_refer_btn"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_gravity="center"
                    android:paddingRight="50dp"
                    android:paddingLeft="50dp"
                    android:textSize="14sp"
                    android:drawableLeft="@drawable/ic_share"
                    android:text="REFER NOW"
                    android:textColor="@color/white"
                    android:background="@drawable/curved_button"/>
                <Button
                    android:id="@+id/activity_refer_earn_term"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/term_refer"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@color/transparent"
                    android:textSize="12sp"
                    android:textColor="@color/playzon_blue_detail"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_marginTop="230dp"
                android:layout_width="match_parent"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_marginLeft="5dp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/referral_msg"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>